--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <a href="#services">Experience</a>
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
+            <a href="#contact">PA</a>
         </nav>
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
